# Cloud-optimization-dashboard

./: README.md
backend/: .env  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 113bb09cdca8_add_resource_table.py  7846d0d1dfc6_initial_migration.py  dc2516534dfd_initial_migration.py
backend/app/: crud.py  database.py  main.py  models.py
cloud-optimizer-frontend/: package-lock.json  package.json
cloud-optimizer-frontend/src/app/: layout.tsx  page.tsx
